--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.111.0
 uvicorn==0.30.1
 transformers==4.41.2
-torch==2.3.0
-pymupdf==1.24.1
+torch==2.5.1
+sentence-transformers==2.7.0
+PyMuPDF==1.23.25
 language-tool-python==2.7.1
